Ensure consistent vertical spacing

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -1250,6 +1250,7 @@ div#highlight p {
   margin: 0 0 8px;
   padding: 0;
   font-size: 14px;
+  min-height: 3em;
 }
 
 .chart-key-list li div {
